kube/gha_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-actions
  labels:
    name: github-actions
