kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsdb-backend
  namespace: rsdb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: rsdb-backend
  template:
    metadata:
      labels:
        app: rsdb-backend
    spec:
      containers:
      - name: rsdb-backend-container
        image: __DOCKER_IMAGE__ 
        ports:
        - containerPort: 8080
        readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
      imagePullSecrets:
      - name: regcred
