kube/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsdb 
  labels:
    name: rsdb
---
kind: Service
apiVersion: v1
metadata:
  name: rsdb-dev-backend-service 
  namespace: rsdb
spec:
  selector:
    app: rsdb-dev-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: rsdb-backend-service 
  namespace: rsdb
spec:
  selector:
    app: rsdb-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - {key: app, operator: In, values: [rsdb-backend, rsdb-dev-backend]}
    ports:
    - port: 3306
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsdb-ingress
  namespace: rsdb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - rsdb.webstra.dev
      secretName: rsdb-tls
    - hosts:
      - dev.rsdb.webstra.dev
      secretName: rsdb-dev-tls
  rules:
  - host: rsdb.webstra.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rsdb-backend-service
            port:
              number: 8080
  - host: dev.rsdb.webstra.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rsdb-dev-backend-service
            port:
              number: 8080
